# ski-project

./: CMakeLists.txt
include/builtin/: Value.hpp  fonctions.hpp
include/ski_core/frontend/: TYPES.hpp
src/builtin/: fonctions.cpp
src/ski_core/backend/: TYPES.cpp
